--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -7,6 +7,17 @@
 		$tileHeight: 480px;
 		$tileDivider: $tileWidth / $targetWidth;
 		
+		&.selected {
+			-webkit-filter: invert(100%);
+			filter: invert(100%);
+		}
+		&.blocked {
+			-webkit-filter: invert(20%);
+			filter: invert(20%);
+		}
+		-webkit-transition: -webkit-filter 0.3s ease-in-out;
+		transition: filter 0.3s ease-in-out;
+		
 		position: absolute;
 		width: #{$tileWidth / $tileDivider};
 		height: #{$tileHeight / $tileDivider};
