--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,87 +1,6 @@
-#board {
-	position: relative;
-	.tile {
-		$targetWidth: 50px;
-		
-		$tileWidth: 348.959px;
-		$tileHeight: 480px;
-		$tileDivider: $tileWidth / $targetWidth;
-		
-		&:hover:not(.blocked) {
-			margin-top: 3px;
-		}
-		&.selected {
-			-webkit-filter: invert(100%);
-			filter: invert(100%);
-		}
-		&.blocked {
-			-webkit-filter: invert(20%);
-			filter: invert(20%);
-		}
-		-webkit-transition: -webkit-filter 0.3s ease-in-out, margin 0.3s ease-in-out;
-		transition: filter 0.3s ease-in-out, margin 0.3s ease-in-out;
-		
-		position: absolute;
-		width: #{$tileWidth / $tileDivider};
-		height: #{$tileHeight / $tileDivider};
-		background-size: 100%;
-		background-repeat: no-repeat;
-		
-		-webkit-box-shadow 	: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		-moz-box-shadow 	: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		-ms-moz-box-shadow  : 5px -8px 3px 0px rgba(0,0,0,0.4);
-		-o-moz-box-shadow 	: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		box-shadow 			: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		
-		display: inline-block;
-		@for $i from 1 through 9 {
-			&.bamboo-#{$i} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1) * -1};
-			}
-			&.character-#{$i} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 9) * -1};
-			}
-			&.circle-#{$i} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 18) * -1};
-			}
-		}
-		$colors: 'green' 'red' 'white';
-		@for $i from 1 through length($colors) {
-			$c: nth($colors, $i);
-			&.dragon-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 27) * -1};
-			}
-		}
-		
-		$flowers: bamboo chrysantememum 'orchid' 'plum';
-		@for $i from 1 through length($flowers) {
-			$c: nth($flowers, $i);
-			&.flower-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 30) * -1};
-			}
-		}
-		
-		$seasons: autumn spring summer winter;
-		@for $i from 1 through length($seasons) {
-			$c: nth($seasons, $i);
-			&.season-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 34) * -1};
-			}
-		}
-		
-		$directions: east north south west;
-		@for $i from 1 through length($directions) {
-			$c: nth($directions, $i);
-			&.wind-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 38) * -1};
-			}
-		}
-	}
-}
+// variables
+@import "variables/view";
+
+// pages
+@import "pages/view-game";
+@import "pages/view-board";
