--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,6 +1,9 @@
 // variables
 @import "variables/view";
 
+// globals
+@import "globals/tiles";
+
 // pages
 @import "pages/view-game";
 @import "pages/view-board";
