--- a/app/scss/pages/view-board.scss
+++ b/app/scss/pages/view-board.scss
@@ -1,87 +1,27 @@
+@mixin invert-filter($percentage) {
+	-webkit-filter: invert($percentage);
+			filter: invert($percentage);
+}
+
+@mixin filter-transition() {
+	-webkit-transition: -webkit-filter 0.3s ease-in-out, margin 0.3s ease-in-out;
+			transition: filter 0.3s ease-in-out, margin 0.3s ease-in-out;
+}
+
 #board {
 	position: relative;
 	.tile {
-		$targetWidth: 50px;
-		
-		$tileWidth: 348.959px;
-		$tileHeight: 480px;
-		$tileDivider: $tileWidth / $targetWidth;
+		position: absolute;
+		@include filter-transition();
 		
 		&:hover:not(.blocked) {
-			margin-top: 3px;
+			margin-top: $tileHoverMargin;
 		}
 		&.selected {
-			-webkit-filter: invert(100%);
-			filter: invert(100%);
+			@include invert-filter(100%);
 		}
 		&.blocked {
-			-webkit-filter: invert(20%);
-			filter: invert(20%);
-		}
-		-webkit-transition: -webkit-filter 0.3s ease-in-out, margin 0.3s ease-in-out;
-		transition: filter 0.3s ease-in-out, margin 0.3s ease-in-out;
-		
-		position: absolute;
-		width: #{$tileWidth / $tileDivider};
-		height: #{$tileHeight / $tileDivider};
-		background-size: 100%;
-		background-repeat: no-repeat;
-		
-		-webkit-box-shadow 	: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		-moz-box-shadow 	: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		-ms-moz-box-shadow  : 5px -8px 3px 0px rgba(0,0,0,0.4);
-		-o-moz-box-shadow 	: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		box-shadow 			: 5px -8px 3px 0px rgba(0,0,0,0.4);
-		
-		display: inline-block;
-		@for $i from 1 through 9 {
-			&.bamboo-#{$i} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1) * -1};
-			}
-			&.character-#{$i} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 9) * -1};
-			}
-			&.circle-#{$i} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 18) * -1};
-			}
-		}
-		$colors: 'green' 'red' 'white';
-		@for $i from 1 through length($colors) {
-			$c: nth($colors, $i);
-			&.dragon-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 27) * -1};
-			}
-		}
-		
-		$flowers: bamboo chrysantememum 'orchid' 'plum';
-		@for $i from 1 through length($flowers) {
-			$c: nth($flowers, $i);
-			&.flower-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 30) * -1};
-			}
-		}
-		
-		$seasons: autumn spring summer winter;
-		@for $i from 1 through length($seasons) {
-			$c: nth($seasons, $i);
-			&.season-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 34) * -1};
-			}
-		}
-		
-		$directions: east north south west;
-		@for $i from 1 through length($directions) {
-			$c: nth($directions, $i);
-			&.wind-#{$c} {
-				background-image: url(../images/tiles.png);
-				background-position: 0px #{$tileHeight / $tileDivider * ($i - 1 + 38) * -1};
-			}
+			@include invert-filter(20%);
 		}
 	}
 }
